# sql-analyzer

./: .gitignore  .pre-commit-config.yaml  .taskmasterconfig  LICENSE  README.md  debug_use_test.py  pyproject.toml  pyrightconfig.json  report.html  requirements.txt  setup.py
docs/: more_unsupported_syntax.md  snowflake_feature_gaps_implementation_plan.md  unsupported_snowflake_syntax.md  unsupported_snowflake_syntax_plan.md
memory_bank/: extended_analytics.md  html_implementation.md  html_output_design.md  implementation.md  pip_and_precommit.md  project_spec.md  snowflake_additional_features.md  snowflake_full_core_coverage.md  snowflake_missing_features_plan.md  snowflake_next_features.md  snowflake_validator_implementation.md
sample_sql/: comprehensive_snowflake.sql  create_objects.sql  extensive_snowflake.sql  sample_data_queries.sql  simple_select.sql
scripts/: prd.txt
sql-analyzer/: test_use_debug.py  try_direct.py
sql_analyzer/: __init__.py  cli.py  main.py  parser.py  snowflake.lark  validation.py  visitor_fix.py
sql_analyzer/analysis/: engine.py  models.py
sql_analyzer/grammar/: snowflake.lark
sql_analyzer/parser/: core.py  visitor.py
sql_analyzer/reporting/: __init__.py  manager.py
sql_analyzer/reporting/formats/: __init__.py  csv.py  html.py  json.py  text.py
sql_analyzer/reporting/templates/: validation_report.html
sql_analyzer/utils/: error_handling.py  file_system.py
tests/: debug_use.py  test_analysis.py  test_cli.py  test_clone.py  test_extended_analytics.py  test_grouping_and_types.py  test_merge_features.py  test_more_syntax.py  test_parser.py  test_pipe.py  test_policy_statements.py  test_reporting.py  test_snowflake_additional_features.py  test_snowflake_alerts.py  test_snowflake_full_core_features.py  test_snowflake_integrations.py  test_snowflake_roles.py  test_unsupported_features.py  test_validation.py
tests/fixtures/invalid/: stage_fileformat_copyinto_invalid.sql  syntax_error.sql
tests/fixtures/snowflake_doc_examples/: snowflake_examples.sql  snowflake_examples_10.sql  snowflake_examples_11.sql  snowflake_examples_12.sql  snowflake_examples_13.sql  snowflake_examples_14.sql  snowflake_examples_2.sql  snowflake_examples_3.sql  snowflake_examples_4.sql  snowflake_examples_5.sql  snowflake_examples_6.sql  snowflake_examples_7.sql  snowflake_examples_8.sql  snowflake_examples_9.sql
tests/fixtures/snowflake_docs_samples/: snowflake_split_1.sql  snowflake_split_10.sql  snowflake_split_100.sql  snowflake_split_101.sql  snowflake_split_102.sql  snowflake_split_103.sql  snowflake_split_104.sql  snowflake_split_105.sql  snowflake_split_106.sql  snowflake_split_107.sql  snowflake_split_108.sql  snowflake_split_109.sql  snowflake_split_11.sql  snowflake_split_110.sql  snowflake_split_111.sql  snowflake_split_112.sql  snowflake_split_113.sql  snowflake_split_114.sql  snowflake_split_115.sql  snowflake_split_116.sql  snowflake_split_117.sql  snowflake_split_118.sql  snowflake_split_119.sql  snowflake_split_12.sql  snowflake_split_120.sql  snowflake_split_121.sql  snowflake_split_122.sql  snowflake_split_123.sql  snowflake_split_124.sql  snowflake_split_125.sql  snowflake_split_126.sql  snowflake_split_127.sql  snowflake_split_128.sql  snowflake_split_129.sql  (+466 more)
tests/grammar/: test_snowflake_constructs.py  test_snowflake_doc_examples.py
utils/: error_handling.py  file_system.py
(+10 files in other folders)
