[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-analyzer"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A short description of the project."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/sql-analyzer"
"Bug Tracker" = "https://github.com/yourusername/sql-analyzer/issues"
